Alteração no endereço da HomePage

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://bruhoffman.github.io/pokedex-project",
+  "homepage": "https://bruhoffman.github.io/pokedex-project/index.js",
   "name": "pokedextelks",
   "version": "0.1.0",
   "private": true,
