--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://bruhoffman.github.io/pokedex-project/index.js",
+  "homepage": "https://bruhoffman.github.io/pokedex-project/",
   "name": "pokedextelks",
   "version": "0.1.0",
   "private": true,
